first/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 10px;
}

body {
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  line-height: 1.7;
  color: #777;
  padding: 3vh;
}

.headerPage {
  height: 94vh;
  background-image: linear-gradient(
      to right bottom,
      rgba(3, 108, 255, 0.6),
      rgba(196, 131, 0, 0.3)
    ),
    url('./images/oldTown.png');
  background-size: cover;
  background-position: center; /*top...*/
}

.logoBox {
  position: absolute;
  left: 6rem;
}

.logo {
  height: 15rem;
  width: 15rem;
}

.headingText {
  position: absolute;
  left: 50%;
  top: 30%;
  color: white;
  transform: translate(-50%, -50%);
  padding: 0.5rem;
  text-align: center;
  border-radius: 0.5rem;
}

.primaryText {
  font-size: 4.5rem;
  display: block;
  letter-spacing: 1.5rem;
  text-align: center;

  animation: moveFromRight;
  animation-duration: 3s;
}

.secondaryText {
  font-size: 0.65em;
  display: block;
  letter-spacing: 1.75rem;
  text-align: center;

  animation: moveFromLeft;
  animation-duration: 3s;
}

@keyframes moveFromLeft {
  0% {
    opacity: 0;
    transform: translateX(-10rem);
  }

  100% {
    opacity: 1;
    transform: translateX(0px);
  }
}

@keyframes moveFromRight {
  0% {
    opacity: 0;
    transform: translateX(10rem);
  }

  100% {
    opacity: 1;
    transform: translateX(0px);
  }
}

@keyframes appear {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.headingButton:link,
.headingButton:visited {
  position: absolute;
  left: 50%;
  top: 52%;
  transform: translate(-50%, -50%);
  text-decoration: none;
  color: rgb(77, 77, 77);
  background-color: white;
  padding: 0.5rem 2rem;
  border-radius: 1.5rem;
  text-transform: lowercase;
  font-size: 1.4rem;
  letter-spacing: 0.5rem;
  display: inline-block;
  transition: 0.2s;

  animation: appear;
  animation-duration: 3s;
}

.headingButton:hover {
  transform: translate(-50%, -53%);
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
  font-size: 1.42rem;
}

.headingButton:active {
  transform: translate(-50%, -50%);
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
}

.examplesPage {
  background-image: url('./images/noise.png');
  padding-bottom: 10vh;
}

.examplesText {
  font-size: 4rem;
  text-align: center;
  padding-top: 25vh;
  padding-bottom: 8vh;
  letter-spacing: 8px;
}

.examplesTitle {
  font-size: 4rem;
}

.portfolioWrapper {
  margin: 2rem;
  display: grid;
  padding-bottom: 2rem;
}

.youtubePlayer {
  width: 95%;
  height: 70vh;
  margin: auto;
  padding-top: 2rem;
}

.pricePage {
  background-image: url('./images/noise.png');
  padding-bottom: 10vh;
}

.plansWrapper {
  padding-top: 3rem;
  padding-bottom: 3rem;
  background-color: blue;
  text-align: center;
  border-radius: 5rem;
}

.plan {
  position: relative;
  vertical-align: top;
  box-sizing: border-box;
  display: inline-block;
  margin: 2rem;
  margin-left: 5%;
  margin-right: 5%;
  background-color: rgb(216, 216, 216);
  color: black;
  height: 35rem;
  width: 22rem;
  border-radius: 6px;
}

.priceText {
  font-size: 4rem;
  text-align: center;
  padding-top: 12vh;
  padding-bottom: 8vh;
  letter-spacing: 8px;
}

.contactsPage {
  height: 97vh;
  background-image: url('./images/noise.png');
}

.planTitle {
  padding-top: 1.5rem;
  padding-bottom: 1rem;
  font-size: 2rem;
  letter-spacing: 5px;
  text-transform: uppercase;
}

.plansTitleSeparation {
  margin-left: 9rem;
  margin-right: 9rem;
  margin-bottom: 2rem;
}

.planOption {
  color: white;
  font-size: 1.5rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.priceTag {
  width: 22rem;
  color: black;
  font-size: 3rem;
  position: absolute;
  bottom: 10px;
}

.basePrice {
  vertical-align: top;
}

.currencySign {
  font-size: 1rem;
  vertical-align: top;
  font-weight: 900;
}

.timeUnit {
  font-size: 1rem;
  font-weight: 900;
}

.additionalPrice {
  position: relative;
  font-size: 1.5rem;
  top: -0.5rem;
  left: 0.8rem;
}

